--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -66,7 +66,7 @@
                             <li class="uk-nav-divider"></li>
                             <li class="uk-active"><a href="/edit/">Настройки профиля</a></li>
                             <li class="uk-active"><a href="/logout/">Выйти</a></li>
-                            <li class="uk-active"><a href="/chats">Чат</a></li>
+                            <li class="uk-active"><a href="/chats">Чаты</a></li>
                         </ul>
                     </div>
                 </li>
@@ -137,25 +137,25 @@
     <div class="uk-offcanvas-bar">
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active">
-                <a href="/creators/goods/search/Дизайнерская одежда" class="uk-button uk-button-text">Дизайнерская одежда</a>
+                <a href="/creators/goods/category/Дизайнерская одежда" class="uk-button uk-button-text">Дизайнерская одежда</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/search/Дизайнерская обувь" class="uk-button uk-button-text">Дизайнерская обувь</a>
+                <a href="/creators/goods/category/Дизайнерская обувь" class="uk-button uk-button-text">Дизайнерская обувь</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/search/Сумки" class="uk-button uk-button-text">Сумки</a>
+                <a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/search/Интерьер" class="uk-button uk-button-text">Интерьер</a>
+                <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/search/Украшения" class="uk-button uk-button-text">Украшения</a>
+                <a href="/creators/goods/category/Украшения" class="uk-button uk-button-text">Украшения</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/search/Скульптуры" class="uk-button uk-button-text">Скульптуры</a>
+                <a href="/creators/goods/category/Скульптуры" class="uk-button uk-button-text">Скульптуры</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/search/Подушки" class="uk-button uk-button-text">Подушки</a>
+                <a href="/creators/goods/category/Подушки" class="uk-button uk-button-text">Подушки</a>
             </li>
         </ul>
     </div>
