--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -68,25 +68,25 @@
             <li class="uk-parent">
                 <ul class="uk-nav uk-nav-default">
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Дизайнерская одежда" class="uk-button uk-button-text">Дизайнерская одежда</a>
+                        <a href="/creators/goods/category/Дизайнерская одежда" class="uk-button uk-button-text">Дизайнерская одежда</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Дизайнерская обувь" class="uk-button uk-button-text">Дизайнерская обувь</a>
+                        <a href="/creators/goods/category/Дизайнерская обувь" class="uk-button uk-button-text">Дизайнерская обувь</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Сумки" class="uk-button uk-button-text">Сумки</a>
+                        <a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Интерьер" class="uk-button uk-button-text">Интерьер</a>
+                        <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Украшения" class="uk-button uk-button-text">Украшения</a>
+                        <a href="/creators/goods/category/Украшения" class="uk-button uk-button-text">Украшения</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Скульптуры" class="uk-button uk-button-text">Скульптуры</a>
+                        <a href="/creators/goods/category/Скульптуры" class="uk-button uk-button-text">Скульптуры</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Подушки" class="uk-button uk-button-text">Подушки</a>
+                        <a href="/creators/goods/category/Подушки" class="uk-button uk-button-text">Подушки</a>
                     </li>
                 </ul>
             </li>
@@ -156,25 +156,25 @@
             <li class="uk-parent">
                 <ul class="uk-nav uk-nav-default">
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Дизайнерская одежда" class="uk-button uk-button-text">Дизайнерская одежда</a>
+                        <a href="creators/goods/category/Дизайнерская одежда" class="uk-button uk-button-text">Дизайнерская одежда</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Дизайнерская обувь" class="uk-button uk-button-text">Дизайнерская обувь</a>
+                        <a href="creators/goods/category/Дизайнерская обувь" class="uk-button uk-button-text">Дизайнерская обувь</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Сумки" class="uk-button uk-button-text">Сумки</a>
+                        <a href="creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Интерьер" class="uk-button uk-button-text">Интерьер</a>
+                        <a href="creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Украшения" class="uk-button uk-button-text">Украшения</a>
+                        <a href="creators/goods/category/Украшения" class="uk-button uk-button-text">Украшения</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Скульптуры" class="uk-button uk-button-text">Скульптуры</a>
+                        <a href="creators/goods/category/Скульптуры" class="uk-button uk-button-text">Скульптуры</a>
                     </li>
                     <li class="uk-active">
-                        <a href="/creators/goods/search/Подушки" class="uk-button uk-button-text">Подушки</a>
+                        <a href="creators/goods/category/Подушки" class="uk-button uk-button-text">Подушки</a>
                     </li>
                 </ul>
             </li>
