--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -5,21 +5,19 @@
 
             <!-- start of bloc 1 -->
             <div class="tab" style="display: block;">
-                <label>Название товара <i uk-tooltip="ВВедите название товара"
-                        class="fa-duotone fa-question"></i></label>
+                <label>Название товара <i uk-tooltip="ВВедите название товара" uk-icon="question"></i></label>
                 <div class="input-group mt-2 mb-2">
                     {{ form8.product_name }}
                 </div>
                 <br>
                 <br>
                 <label>Страна производитель <i uk-tooltip="В какой стране был произведенвашь товар?"
-                        class="fa-duotone fa-question"></i></label> {{ form8.country }}
+                        uk-icon="question"></i></label> {{ form8.country }}
                 <div class="input-group mt-2 mb-2">
                 </div>
                 <br>
                 <br>
-                <label>Бренд <i uk-tooltip="Тут нужно указать назвение бренда товара"
-                        class="fa-duotone fa-question"></i></label>
+                <label>Бренд <i uk-tooltip="Тут нужно указать назвение бренда товара" uk-icon="question"></i></label>
                 <div class="input-group mt-2 mb-2">
                     {{ form8.brand }}
                 </div>
@@ -27,7 +25,7 @@
                 <br>
                 <label>Комлектация товара <i
                         uk-tooltip="Введите все, что идет в комплекте с товаром. Не забудьте нажать на плючик, что бы добавить комплект к товару"
-                        class="fa-duotone fa-question"></i></label>
+                        uk-icon="question"></i></label>
                 <div class="input-group mt-2 mb-2">
                     <input type="text" id="inputvalue" maxlength="40" class="form-control changible">
                     <button class="btn btn-outline-secondary" id="btnAdd" name="addComplect" onclick="addInput(this)"
@@ -45,7 +43,7 @@
 
             <!-- sart of block 2 -->
             <div class="tab" style="display: none">
-                <label>Цена <i uk-tooltip="Укажите цену вашего товара" class="fa-duotone fa-question"></i></label>
+                <label>Цена <i uk-tooltip="Укажите цену вашего товара" uk-icon="question"></i></label>
                 <div class=" input-group mb-3 ">
                     {{ form8.price }}
                     <span class="input-group-text ">.00</span>
@@ -70,21 +68,21 @@
             <div class="tab" style="display: none">
                 <label>Описание <i
                         uk-tooltip="Опишите свой товар. Так покупателям будет легче понять, что они точно хотят его купить"
-                        class="fa-duotone fa-question"></i></label>
+                        uk-icon="question"></i></label>
 
                 {{ form8.description }}
-                    <br>
+                <br>
                 <div class="uk-flex uk-flex-middle uk-flex-between">
                     <div class="uk-width-1-2">
                         <label> Категория <i uk-tooltip="К какой категории вы относите свой товар?"
-                                class="fa-duotone fa-question"></i></label>
+                                uk-icon="question"></i></label>
                         {{ form8.category }}
                     </div>
                     <br>
                     <div class="uk-width-1-2">
                         <label> Срок получения товара <i
                                 uk-tooltip="Укажите, через сколько покупатель сможет получить свой товар после покупки"
-                                class="fa-duotone fa-question"></i></label>
+                                uk-icon="question"></i></label>
                         {{ form8.duration }}
                     </div>
                 </div>
@@ -92,7 +90,7 @@
                 <br>
                 <label>Ключевые слова <i
                         uk-tooltip="Укажите ключевые слова, которые относятся к вашему товару. Так покупателя будет проще найти его"
-                        class="fa-duotone fa-question"></i></label>
+                        uk-icon="question"></i></label>
                 <div class="input-group mt-2 mb-2">
                     <input type="text" id="keyValue" maxlength="40" class="form-control changible">
                     <button class="btn btn-outline-secondary" id="btnAddkey" name="addkey" onclick="addKey(this)"
@@ -106,7 +104,7 @@
                     <div class="col-md-8">
                         <label class="labels">Загрузить фото <i
                                 uk-tooltip="Загрузите фото товара, что бы все видели, какой он красивый"
-                                class="fa-duotone fa-question"></i></label>
+                                uk-icon="question"></i></label>
                         <input id="fileupload" class="form-control" name="product_photos" type="file" />
                     </div>
                 </div>
@@ -117,7 +115,7 @@
 
                 <div>
                     <label>Размер товара <b>(см)</b> <i uk-tooltip="Тут надо указать размеры товара"
-                            class="fa-duotone fa-question"></i></label>
+                            uk-icon="question"></i></label>
                     <div class="input-group mt-2 mb-2">
                         <span class="input-group-text">высота</span>
                         {{ form8.height_product }}
@@ -129,7 +127,7 @@
                     </div>
                     <label>Размер упаковки <b>(см)</b> <i
                             uk-tooltip="Тут надо указать размеры упаковки(если ее нет, просто оставь поля нулевыми)."
-                            class="fa-duotone fa-question"></i></label>
+                            uk-icon="question"></i></label>
                     <div class="input-group mt-2 mb-2">
                         <span class="input-group-text">высота</span>
                         {{ form8.height_packaging }}
@@ -189,9 +187,6 @@
         let moneyInput = parseInt(document.getElementById('priceInput').value)
         let desc = document.getElementById('id_description').value.length
         let key = document.getElementById('keyDiv').children.length
-        let height1 = document.getElementById('id_height_product').value
-        let length1 = document.getElementById('id_length_product').value
-        let width1 = document.getElementById('id_width_product').value
 
         if (n == 1) {
             if (pname < 3 || brand < 3 || comp == 0) {
@@ -217,7 +212,7 @@
 
         }
         if (n == 3) {
-            if (desc <= 0 || key == 0 || height1 <= 0 || length1 <= 0 || width1 <= 0) {
+            if (desc <= 0 || key == 0) {
                 document.getElementById("nextBtn").style["background-color"] = 'gray'
                 document.getElementById("nextBtn").disabled = true;
                 return 0
@@ -300,6 +295,7 @@
         }
         el.parentElement.remove();
         PassChecker(1)
+        PassChecker(3)
     }
 
     function changeInput(el) {
@@ -339,6 +335,7 @@
         } else {
             key.placeholder = "Для добавления элемента необходимо заполнить это поле";
         }
+        PassChecker(3)
     }
 
     function showExtraInputs() {
