--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -8,11 +8,13 @@
 
 </head>
 
-<body style="margin: auto;">
-<div class="uk-margin-large-left uk-margin-medium-top uk-flex" style="width: 90%; margin: auto; ">
-    <div style="width: 20%; height: 100%;">
+<body style="margin: 0 auto;">
+<div class="uk-margin-medium-top uk-flex uk-width-1@m uk-width-4-5" style="margin: 0 auto; ">
+    <div class="uk-width-1-5" style="height: 100%; font-size: 1.2em;">
             <div class="uk-margin-small-left">
-                <h4 class="uk-margin-small-bottom">Электроника - Смартфоны</h4>
+                <ul class="uk-breadcrumb">
+                    <li><a href="/creators/goods/">Все товары</a></li>
+                </ul>
                 <h2 class="uk-margin-medium-bottom uk-margin-small-top">Смартфоны</h2>
                 <div class="textStyleHeaderRegion uk-margin-medium-bottom">
                     <input type="radio" value="value2" class="uk-margin-small-right">
@@ -60,12 +62,12 @@
                     <div class="uk-margin-small-left">
                         <label for="">от</label>
                         <br>
-                        <input id="from" class="uk-input uk-border-pill uk-margin-right" type="number" placeholder="от" style="width: 70%; background-color: #C4C4C4; color: white">
+                        <input id="from" class="uk-input uk-border-rounded uk-margin-right" type="number" placeholder="от" style="color: white">
                         <br>
                         <br>
                         <label for="">до</label>
                         <br>
-                        <input id="to" class="uk-input uk-border-pill" type="number" placeholder="до" style="width: 70%; background-color: #C4C4C4; color: white">
+                        <input id="to" class="uk-input uk-border-rounded" type="number" placeholder="до" style="color: white">
                     </div>
                 </div>
                 <div class="textStyleHeader textAll uk-margin-medium-bottom">
@@ -112,13 +114,11 @@
                 </div>
             </div>
             {% csrf_token %}
-            <button type="submitgit" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom">Применить</button>
+            <button type="submitgit" class="uk-button uk-button-default uk-width-auto uk-margin-small-bottom">Применить</button>
         </form>
     </div>
 
-    <br>
-    <br>
-    <div class="content" class="uk-grid-small uk-child-width-1-4@s uk-flex-center uk-text-center" uk-grid style="margin: auto;" >
+    <div class="uk-flex uk-flex-left uk-flex-middle uk-width-4-5" uk-grid style="margin: auto;" >
 
             {% include "baseProductCard.html" %}
 
@@ -171,83 +171,5 @@
         color: orange;
     }
 </style>
-
-
-<!-- CARD PRODUCT CSS -->
-<style>
-    
-    .box-down-drop {
-        width: 238px;
-        height: 35px;
-        display: flex;
-        transition: 0.8s;
-        
-    }
-
-    .box-down-drop-img {
-        visibility: hidden;
-        transition: 0.2s;
-    }
-
-    .box-footer:hover .box-down-drop-img {
-        visibility: visible;
-        transition: 0.8s;
-        transform: translateY(-100%);
-        animation: ani 1s forwards;
-    }
-
-    @keyframes ani {
-        0% {transform: translateY(-150%);}
-        100% {transform: translateY(0);}
-    }
-
-    .box-footer:hover .box-down-drop {
-        width: 238px;
-        height: 35px;
-        display: flex;
-        background-color: rgba(204, 204, 204, 0.151);
-        box-shadow: 0 0 10px rgba(0,0,0,0.5);
-        transition: 0.8s;
-
-
-    }
-    .box-down {
-        width: 238px;
-        height: 100px;
-        padding: 5px;
-    }
-
-    .box-footer {
-        transition: 0.8s;
-        width: 250px;
-        height: 443px;
-        border-radius: 2%;
-        padding: 0;
-        margin: auto;
-    }
-
-    .box-footer:hover {
-        transition: 0.8s;
-        box-shadow: 0 0 10px rgba(0,0,0,0.5);;
-        width: 250px;
-        height: 484px;
-        border-radius: 2%;
-        
-    }
-    p.star{
-        width: 100%;
-        font-size: 20px;
-        color: #808080;
-        margin: 0;
-		}
-
-    .content{
-    }
-</style>
-
-<!-- END CARD PRODUCT CSS -->
-
-
-<script src="js/uikit-icons.min.js"></script>
 
 {% endblock %}
