--- a/bizopt/BO/templates/messanger.html
+++ b/bizopt/BO/templates/messanger.html
@@ -1,71 +1,33 @@
-    <div style="height: 80%; margin: 0 auto; width: 80%" class="uk-position-bottom">
-        <!-- <form action="GET"> -->
-        <div class="uk-card uk-card-default uk-border-rounded uk-margin uk-position-bottom" style="height: 100%; ">
-            <div class="uk-card-body uk-panel uk-panel-scrollable uk-padding-small"
-                style="height: 95%; padding-bottom: 100px;" id="messageDisplay">
-
-
-                <!-- начало текста продавца -->
-                <!-- <div class="guest uk-grid-small uk-flex-bottom uk-flex-left" uk-grid>
-                <div class="uk-width-auto">
-                    <img class="uk-border-circle" width="32" height="32" src="../../media/{{companion.cover}}">
-                </div>
-                <div class="uk-width-auto ">
-                    <div class="uk-card uk-card-body uk-card-small uk-card-default uk-border-rounded uk-width-2-3">
-                        <p class="uk-margin-remove uk-text-break">
-                            {asdasdasdasdkhsdfkhjsdfkhjsdfkhjsdfkhjsdfkhjsdfksdfhjksdfhjksdfhjksdfhjsdfkhjsdfkhjsdfkhjsdfkhjsdfkhjsdfkhjsdfkhjsdf
-                        </p>
-                    </div>
-                </div>
-            </div> -->
-                <!-- конец текста продавца -->
-
-                <!-- начало моего текста -->
-                <!-- <div class="me uk-grid-small uk-flex-bottom uk-flex-right" uk-grid>
-                <div class="uk-width-auto uk-flex uk-flex-right">
-                    <div class="uk-card uk-card-body uk-card-small uk-card-primary uk-border-rounded uk-width-2-3">
-                        <p class="uk-margin-remove uk-text-break">
-                            asdasdasdasdkhsdfkhjsdfkhjsdfkhjsdfkhjsdfkhjsdfksdfhjksdfhjksdfhjksdfhjsdfkhjsdfkhjsdfkhjsdfkhjsdfkhjsdfkhjsdfkhjsdf
-                        </p>
-                    </div>
-                </div>
-                <div class="uk-width-auto">
-                    <img class="uk-border-circle" width="32" height="32" src="../../media/{{user.userImage}}">
-                </div>
-            </div> -->
-                <!-- конец моего текста -->
-
-            </div>
-
-
-            <form id="post-form">
-                {% csrf_token %}
-
-                <div class="uk-card-footer uk-padding-remove uk-position-bottom" style="background-color: white;">
-                    <div class="uk-grid-small uk-flex-middle" uk-grid>
-                        <div class="uk-width-expand" style="margin: 0 3%">
-                            <div class="uk-padding-small uk-padding-remove-horizontal uk-flex" style="margin: 0 auto">
-                                <input type="hidden" id="username" value="{{user.id}}">
-                                <input type="hidden" id="room_id" value="{{room_id}}">
-                                <input class="uk-textarea uk-padding-remove uk-border-rounded uk-margin-small-right"
-                                    placeholder="Напишите сообщение..." id="message" style="font-size: 20px;" />
-                                <input class="uk-button uk-button-text material-symbols-outlined" id="sendBtn"
-                                    type="submit" value="send" />
-                            </div>
-
+<div style="height: 80%;margin: 15% auto 0 auto; width: 70%" class="uk-position-bottom">
+    <!-- <form action="GET"> -->
+    <div class="uk-card uk-card-default uk-border-rounded uk-margin uk-position-bottom" style="height: 100%; ">
+        <div class="uk-card-body uk-panel uk-panel-scrollable uk-padding-small"
+            style="height: 100%; font-size:1.3em" id="messageDisplay">
+        </div>
+        <form id="post-form">
+            {% csrf_token %}
+            <div class="uk-card-footer uk-padding-remove uk-position-bottom" style="background-color: white;">
+                <div class="uk-grid-small uk-flex-middle" uk-grid>
+                    <div class="uk-width-expand" style="margin: 0 3%">
+                        <div class="uk-padding-small uk-padding-remove-horizontal uk-flex" style="margin: 0 auto">
+                            <input type="hidden" id="username" value="{{user.id}}">
+                            <!-- <input type="hidden" id="room_id" value="{{room_id}}"> -->
+                            <input class="uk-textarea uk-padding-remove uk-border-rounded uk-margin-small-right"
+                                placeholder="Напишите сообщение..." id="message" style="font-size: 20px;" />
+                            <input class="uk-button uk-button-text material-symbols-outlined" id="sendBtn" type="submit"
+                                value="send"/>
                         </div>
                     </div>
                 </div>
-            </form>
-        </div>
-
+            </div>
+        </form>
     </div>
-
+</div>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
 <script>
     $(document).ready(function () {
-        var room = $('#room_id').val()
+        var room = localStorage.activeChat
         var id = $('#username').val()
         setInterval(function () {
             $.ajax({
@@ -79,11 +41,11 @@
                             var temp =
                                 '<div class="me uk-grid-small uk-flex-bottom uk-flex-right" uk-grid> <div class="uk-width-auto uk-flex uk-flex-right"> <div class="uk-card uk-card-body uk-card-small uk-card-primary uk-border-rounded uk-width-1"> <p class="uk-margin-remove uk-text-break">' +
                                 response.messages[key].value +
-                                ' </p></div></div><div class="uk-width-auto"><img class="uk-border-circle" width="32" height="32" src="../../media/{{user.userImage}}"></div></div>';
+                                ' </p></div></div></div>';
 
                         } else {
                             var temp =
-                                '<div class="guest uk-grid-small uk-flex-bottom uk-flex-left" uk-grid><div class="uk-width-auto"><img class="uk-border-circle" width="32" height="32" src="../../media/{{companion.userImage}}"></div><div class="uk-width-auto "><div class="uk-card uk-card-body uk-card-small uk-card-default uk-border-rounded uk-width-1"> <p class="uk-margin-remove uk-text-break">' +
+                                '<div class="guest uk-grid-small uk-flex-bottom uk-flex-left" uk-grid><div class="uk-width-auto "><div class="uk-card uk-card-body uk-card-small uk-card-default uk-border-rounded uk-width-1"> <p class="uk-margin-remove uk-text-break">' +
                                 response.messages[key].value +
                                 '</p></div></div></div>';
                         }
@@ -106,8 +68,7 @@
             document.getElementById('sendBtn').click();
         }
     });
-</script>
-<script type="text/javascript">
+
     $(document).on('submit', '#post-form', function (e) {
         e.preventDefault();
         if ($('#message').val().trim()) {
@@ -116,7 +77,7 @@
                 url: '/send',
                 data: {
                     username: $('#username').val(),
-                    room_id: $('#room_id').val(),
+                    room_id: localStorage.activeChat,
                     message: $('#message').val(),
                     csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
                 },
@@ -128,5 +89,3 @@
         document.getElementById('message').value = ''
     });
 </script>
-
-</html>
