--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -13,7 +13,19 @@
     <script src="https://kit.fontawesome.com/6fc980010f.js" crossorigin="anonymous"></script>
 
 </head>
+<style>
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 
+    /* Firefox */
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+</style>
 <body>
     <div
         style="position: fixed; top: 3%; left: 3%; z-index: 1000; background-color: rgba(255, 255, 255, 0.5); border: none">
